[gd_scene load_steps=7 format=3 uid="uid://c538ntn2nevhb"]

[ext_resource type="FontFile" uid="uid://r8canikevo76" path="res://assets/fonts/CalSans-SemiBold.otf" id="1_b8j7r"]
[ext_resource type="Script" path="res://scripts/reusables/track_canvas.gd" id="1_t6w1a"]
[ext_resource type="Texture2D" uid="uid://2otjyh7rkd7x" path="res://assets/ui/pause_white.png" id="3_s3oog"]
[ext_resource type="Texture2D" uid="uid://bci52yd0m6u1b" path="res://assets/ui/pause_black.png" id="4_pwca1"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://addons/virtual_joystick/virtual_joystick_scene.tscn" id="5_4uh8s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0wmtg"]

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_t6w1a")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PhoneButtons" type="Control" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="Control/PhoneButtons"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -144.0
offset_top = 80.0
offset_right = -104.0
offset_bottom = 120.0
grow_horizontal = 0

[node name="TouchScreenButton" type="TouchScreenButton" parent="Control/PhoneButtons/Control"]
scale = Vector2(1.2, 1.2)
texture_normal = ExtResource("3_s3oog")
action = "pause"
visibility_mode = 1

[node name="TextureRect3" type="TextureRect" parent="Control/PhoneButtons/Control/TouchScreenButton"]
show_behind_parent = true
offset_left = -0.833374
offset_right = 99.1666
offset_bottom = 100.0
scale = Vector2(1.01, 1.01)
texture = ExtResource("4_pwca1")

[node name="Left Joystick" parent="Control/PhoneButtons" instance=ExtResource("5_4uh8s")]
layout_mode = 1
offset_top = -584.0
offset_bottom = -284.0
scale = Vector2(2, 2)
action_left = "left"
action_right = "right"
action_up = "forward"
action_down = "backward"

[node name="Right Joystick2" parent="Control/PhoneButtons" instance=ExtResource("5_4uh8s")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_right = 1.0
offset_left = -600.0
offset_top = -584.0
offset_right = -300.0
offset_bottom = -284.0
grow_horizontal = 0
scale = Vector2(2, 2)
action_left = "left"
action_right = "right"
action_up = "forward"
action_down = "backward"

[node name="PauseScreen" type="ColorRect" parent="Control"]
process_mode = 2
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.670588)

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PauseScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="Control/PauseScreen/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.529412, 0.807843, 0.980392, 1)
theme_override_fonts/font = ExtResource("1_b8j7r")
theme_override_font_sizes/font_size = 96
theme_override_styles/focus = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/normal = SubResource("StyleBoxEmpty_0wmtg")
text = "Resume"

[node name="ReturnToMenuButton" type="Button" parent="Control/PauseScreen/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.529412, 0.807843, 0.980392, 1)
theme_override_fonts/font = ExtResource("1_b8j7r")
theme_override_font_sizes/font_size = 96
theme_override_styles/focus = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/normal = SubResource("StyleBoxEmpty_0wmtg")
text = "Menu"

[node name="EndScreen" type="ColorRect" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.670588)

[node name="VBoxContainer" type="VBoxContainer" parent="Control/EndScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayAgainButton" type="Button" parent="Control/EndScreen/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ReturnToMenuButton")
focus_neighbor_bottom = NodePath("../ReturnToMenuButton")
theme_override_colors/font_hover_color = Color(0.529412, 0.807843, 0.980392, 1)
theme_override_colors/font_focus_color = Color(0.529412, 0.807843, 0.980392, 1)
theme_override_fonts/font = ExtResource("1_b8j7r")
theme_override_font_sizes/font_size = 96
theme_override_styles/focus = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/normal = SubResource("StyleBoxEmpty_0wmtg")
text = "Play again"

[node name="ReturnToMenuButton" type="Button" parent="Control/EndScreen/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../PlayAgainButton")
focus_neighbor_bottom = NodePath("../PlayAgainButton")
theme_override_colors/font_hover_color = Color(0.529412, 0.807843, 0.980392, 1)
theme_override_colors/font_focus_color = Color(0.529412, 0.807843, 0.980392, 1)
theme_override_fonts/font = ExtResource("1_b8j7r")
theme_override_font_sizes/font_size = 96
theme_override_styles/focus = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_0wmtg")
theme_override_styles/normal = SubResource("StyleBoxEmpty_0wmtg")
text = "Return to menu"

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -104.0
offset_top = 16.0
offset_right = 108.0
offset_bottom = 136.0
grow_horizontal = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_b8j7r")
theme_override_font_sizes/font_size = 128
text = "5:10.0"
horizontal_alignment = 1

[node name="RecordLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -136.0
offset_top = 120.0
offset_right = 140.0
offset_bottom = 166.0
grow_horizontal = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_b8j7r")
theme_override_font_sizes/font_size = 48
text = "Record: 1:5.67"
horizontal_alignment = 1

[node name="Speed" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -320.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 80.0
grow_horizontal = 0
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_b8j7r")
theme_override_font_sizes/font_size = 64
text = "100 km/h"
horizontal_alignment = 2

[node name="FPSLabel" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 117.0
offset_bottom = 76.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("1_b8j7r")
theme_override_font_sizes/font_size = 72
text = "123 FPS"

[connection signal="pressed" from="Control/PauseScreen/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Control/PauseScreen/VBoxContainer/ReturnToMenuButton" to="." method="_on_return_to_menu_button_pressed"]
[connection signal="pressed" from="Control/EndScreen/VBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="Control/EndScreen/VBoxContainer/ReturnToMenuButton" to="." method="_on_return_to_menu_button_pressed"]
